# ancmp

./: .gitignore  Android.mk  CMakeLists.txt  LICENSE  README.md  compile-msvc.bat  compile.bat  compile.sh
ancmp/: abi_fix.c  abi_fix.h  ancmp_rng.c  ancmp_rng.h  ancmp_stdint.h  android_,math.c  android_aeabi.c  android_aeabi.h  android_arc4random.c  android_arc4random.h  android_atomic.c  android_atomic.h  android_auxvec.h  android_ctype.c  android_ctype.h  android_ctypes.c  android_ctypes.h  android_cxa.c  android_cxa.h  android_cxa_guard.c  android_cxa_guard.h  android_dirent.c  android_dirent.h  android_dlfcn.c  android_dlfcn.h  android_elf.h  android_elf_exec.h  android_errno.c  android_errno.h  android_fcntl.c  android_fcntl.h  android_fnmatch.c  android_fnmatch.h  android_futex.c  android_futex.h  android_io.c  android_io.h  android_ioctl.c  android_ioctl.h  android_linker_defs.h  (+60 more)
ancmp/inet/: android_inet.h  android_inet_ntop.c  android_inet_ntop.h
ancmp/string/: android_bcopy.c  android_bcopy.h  android_index.c  android_index.h  android_memccpy.c  android_memccpy.h  android_memchr.c  android_memchr.h  android_memcmp.c  android_memcmp.h  android_memcpy.c  android_memcpy.h  android_memmem.c  android_memmem.h  android_memmove.c  android_memmove.h  android_memrchr.c  android_memrchr.h  android_memset.c  android_memset.h  android_memswap.c  android_memswap.h  android_strcasecmp.c  android_strcasestr.c  android_strcasestr.h  android_strcat.c  (+46 more)
build-win32/: CMakeCache.txt  Makefile  cmake_install.cmake
jni/: Android.mk
vc98/: ancmp.dsp  ancmp.dsw
(+68 files in other folders)
